more readable fluent style tests