@@ -28,70 +28,70 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testSpatValidation_MissingTimeStamp() {
-        SPAT spat = getSpat(false, true, true, true, true, true, true);
+        SPAT spat = getSpat().withoutSpatTimestamp().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("SPAT 'timeStamp'")));
     }
 
     @Test
     public void testSpatValidation_PresentTimeStamp() {
-        SPAT spat = getSpat(true, true, true, true, true, true, true);
+        SPAT spat = getSpat().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V1));
         assertThat(messages, not(hasItem(containsString("SPAT 'timeStamp'"))));
     }
 
     @Test
     public void testSpatValidation_MissingIntersectionRegion_V1() {
-        SPAT spat = getSpat(true, false, true, true, true, true, true);
+        SPAT spat = getSpat().withoutRegion().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("id.region")));
     }
 
     @Test
     public void testSpatValidation_PresentIntersectionRegion_V2_Deprecated() {
-        SPAT spat = getSpat(true, true, true, true, true, true, true);
+        SPAT spat = getSpat().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V2_DRAFT));
         assertThat(messages, hasItem(containsString("deprecated")));
     }
 
     @Test
     public void testSpatValidation_V2_NoRegion_NoDeprecatedMessage() {
-        SPAT spat = getSpat(true, false, true, true, true, true, true);
+        SPAT spat = getSpat().withoutRegion().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V2_DRAFT));
         assertThat(messages, not(hasItem(containsString("deprecated"))));
     }
 
     @Test
     public void testSpatValidation_MissingIntersectionTimeStamp() {
-        SPAT spat = getSpat(true, true, false, true, true, true, true);
+        SPAT spat = getSpat().withoutIntersectionTimestamp().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("intersections 'timeStamp'")));
     }
 
     @Test
     public void testSpatValidation_MissingTimingField() {
-        SPAT spat = getSpat(true, true, true, false, true, true, true);
+        SPAT spat = getSpat().withoutTiming().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("'timing' DF_TimeChangeDetails is missing")));
     }
 
     @Test
     public void testSpatValidation_MissingStartTime() {
-        SPAT spat = getSpat(true, true, true, true, false, true, true);
+        SPAT spat = getSpat().withoutStartTime().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("timing.startTime")));
     }
 
     @Test
     public void testSpatValidation_MissingMaxEndTime() {
-        SPAT spat = getSpat(true, true, true, true, true, false, true);
+        SPAT spat = getSpat().withoutMaxEndTime().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("timing.maxEndTime")));
     }
 
     @Test
     public void testSpatValidation_MissingMaxEndTime_DedupedAcrossEvents() {
-        SPAT spat = getSpat(true, true, true, true, true, false, true);
+        SPAT spat = getSpat().withoutMaxEndTime().build();
 
         MovementEvent secondEvent = new MovementEvent();
         TimeChangeDetails secondTiming = new TimeChangeDetails();
@@ -108,7 +108,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testSpatValidation_MissingTiming_DedupedAcrossEvents() {
-        SPAT spat = getSpat(true, true, true, false, true, true, true);
+        SPAT spat = getSpat().withoutTiming().build();
 
         MovementEvent secondEvent = new MovementEvent();
         secondEvent.setTiming(null);
@@ -121,14 +121,14 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testSpatValidation_MissingNextTime() {
-        SPAT spat = getSpat(true, true, true, true, true, true, false);
+        SPAT spat = getSpat().withoutNextTime().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("timing.nextTime")));
     }
 
     @Test
     public void testSpatValidation_AllFieldsPresent() {
-        SPAT spat = getSpat(true, true, true, true, true, true, true);
+        SPAT spat = getSpat().build();
         List<String> messages = toMessages(CTI4501Validator.spatValidation(spat, SpatStandard.CTI4501_V1));
         assertThat(messages, empty());
     }
@@ -139,49 +139,49 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_MinimalMapData() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
         List<String> messages = toMessages(CTI4501Validator.mapValidation(mapData, MapStandard.CTI4501_V1));
         assertThat(messages, empty());
     }
 
     @Test
     public void testMapValidation_MissingRegion_V1() {
-        MapData mapData = getMap(false, true, true, true, true, true, true);
+        MapData mapData = getMap().withoutRegion().build();
         List<String> messages = toMessages(CTI4501Validator.mapValidation(mapData, MapStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("id.region")));
     }
 
     @Test
     public void testMapValidation_MissingElevation() {
-        MapData mapData = getMap(true, false, true, true, true, true, true);
+        MapData mapData = getMap().withoutElevation().build();
         List<String> messages = toMessages(CTI4501Validator.mapValidation(mapData, MapStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("refPoint.elevation")));
     }
 
     @Test
     public void testMapValidation_MissingLaneWidth() {
-        MapData mapData = getMap(true, true, false, true, true, true, true);
+        MapData mapData = getMap().withoutLaneWidth().build();
         List<String> messages = toMessages(CTI4501Validator.mapValidation(mapData, MapStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("laneWidth")));
     }
 
     @Test
     public void testMapValidation_MissingSpeedLimits() {
-        MapData mapData = getMap(true, true, true, false, true, true, true);
+        MapData mapData = getMap().withoutSpeedLimits().build();
         List<String> messages = toMessages(CTI4501Validator.mapValidation(mapData, MapStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("speedLimits")));
     }
 
     @Test
     public void testMapValidation_MissingSpeedLimitType() {
-        MapData mapData = getMap(true, true, true, true, false, true, true);
+        MapData mapData = getMap().withoutSpeedLimitType().build();
         List<String> messages = toMessages(CTI4501Validator.mapValidation(mapData, MapStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("speedLimits 'type'")));
     }
 
     @Test
     public void testMapValidation_MissingSpeedLimitSpeed() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         RegulatorySpeedLimit speedLimit = new RegulatorySpeedLimit();
         speedLimit.setType(SpeedLimitType.VEHICLEMAXSPEED);
@@ -197,28 +197,28 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_IngressVehicleLane_MissingConnectsTo() {
-        MapData mapData = getMap(true, true, true, true, true, true, false);
+        MapData mapData = getMap().withoutConnectsTo().build();
         List<String> messages = toMessages(CTI4501Validator.mapValidation(mapData, MapStandard.CTI4501_V1));
         assertThat(messages, hasItem(containsString("connectsTo")));
     }
 
     @Test
     public void testMapValidation_EgressVehicleLane_NoConnectsToRequired() {
-        MapData mapData = getMap(true, true, true, true, true, false, false);
+        MapData mapData = getMap().egressVehicleLane().withoutConnectsTo().build();
         List<String> messages = toMessages(CTI4501Validator.mapValidation(mapData, MapStandard.CTI4501_V1));
         assertThat(messages, not(hasItem(containsString("DF_ConnectsToList is missing"))));
     }
 
     @Test
     public void testMapValidation_RegionPresent_V2_Deprecated() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
         List<String> messages = toMessages(CTI4501Validator.mapValidation(mapData, MapStandard.CTI4501_V2_DRAFT));
         assertThat(messages, hasItem(containsString("deprecated in CTI-4501 v2")));
     }
 
     @Test
     public void testMapValidation_NodeXY1_DeduplicatesRepeatedMissingXYMessages() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         NodeSetXY nodes = new NodeSetXY();
         nodes.add(nodeXY1(false, false));
@@ -235,7 +235,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_AllNodeXYTypes_MissingXY() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         NodeSetXY nodes = new NodeSetXY();
         nodes.add(nodeXY2MissingXY());
@@ -261,7 +261,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_NodeXY2To6_DeduplicateRepeatedMissingXYMessages() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         NodeSetXY nodes = new NodeSetXY();
         nodes.add(nodeXY2MissingXY());
@@ -292,7 +292,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_NodeAttributes_MissingSpeedLimitTypeAndSpeed_Deduped() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         LaneDataAttribute attribute1 = laneDataAttributeWithSpeedLimit(null, null);
         LaneDataAttribute attribute2 = laneDataAttributeWithSpeedLimit(null, null);
@@ -312,7 +312,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_NodeAttributes_MissingSpeedLimitsList() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         LaneDataAttribute attribute = laneDataAttributeWithSpeedLimits(null);
         NodeXY node = nodeXY1WithAttributes(attribute);
@@ -328,7 +328,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_NodeAttributes_NonNullTypeAndSpeed_NoAttributeSpeedMessages() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         LaneDataAttribute attribute = laneDataAttributeWithSpeedLimit(SpeedLimitType.VEHICLEMAXSPEED, new Velocity(200));
         NodeXY node = nodeXY1WithAttributes(attribute);
@@ -345,7 +345,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_NodeAttributes_MissingSpeedLimitsList_DedupedAcrossAttributes() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         LaneDataAttribute attribute1 = laneDataAttributeWithSpeedLimits(null);
         LaneDataAttribute attribute2 = laneDataAttributeWithSpeedLimits(null);
@@ -362,7 +362,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_ComputedLane_MissingReferenceAndOffsets() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         GenericLane lane = getFirstLane(mapData);
         lane.setNodeList(computedNodeListMissingReferenceAndOffsets());
@@ -376,7 +376,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_ComputedLane_DedupedAcrossLanes() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         GenericLane lane1 = getFirstLane(mapData);
         lane1.setNodeList(computedNodeListMissingReferenceAndOffsets());
@@ -387,7 +387,7 @@ public class CTI4501ValidatorTest {
         lane2.setLaneAttributes(lane1.getLaneAttributes());
         lane2.setConnectsTo(lane1.getConnectsTo());
         lane2.setNodeList(computedNodeListMissingReferenceAndOffsets());
-        mapData.getIntersections().get(0).getLaneSet().add(lane2);
+        mapData.getIntersections().getFirst().getLaneSet().add(lane2);
 
         List<String> messages = toMessages(CTI4501Validator.mapValidation(mapData, MapStandard.CTI4501_V1));
 
@@ -398,7 +398,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_ConnectsTo_MissingConnectingLaneFields() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         getFirstLane(mapData).setConnectsTo(connectsTo(connection(connectingLane(null, null), new SignalGroupID(1))));
 
@@ -410,7 +410,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_ConnectsTo_MissingConnectingLaneFields_DedupedAcrossConnections() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         Connection connection1 = connection(connectingLane(null, null), new SignalGroupID(1));
         Connection connection2 = connection(connectingLane(null, null), new SignalGroupID(2));
@@ -424,7 +424,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_ConnectsTo_MissingSignalGroup() {
-        MapData mapData = getMap(true, true, true, true, true, true, true);
+        MapData mapData = getMap().build();
 
         Connection connection = connection(connectingLane(new LaneID(2), new AllowedManeuvers()), null);
         getFirstLane(mapData).setConnectsTo(connectsTo(connection));
@@ -436,7 +436,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_IngressBikeLane_MissingConnectsTo() {
-        MapData mapData = getMap(true, true, true, true, true, true, false);
+        MapData mapData = getMap().withoutConnectsTo().build();
 
         LaneTypeAttributes laneType = new LaneTypeAttributes();
         laneType.setBikeLane(new LaneAttributes_Bike());
@@ -449,7 +449,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_IngressSidewalkLane_MissingConnectsTo() {
-        MapData mapData = getMap(true, true, true, true, true, true, false);
+        MapData mapData = getMap().withoutConnectsTo().build();
 
         LaneTypeAttributes laneType = new LaneTypeAttributes();
         laneType.setSidewalk(new LaneAttributes_Sidewalk());
@@ -462,7 +462,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_CrosswalkParkingMedianStripingAndUnknown_NoConnectsToMessage() {
-        MapData mapData = getMap(true, true, true, true, true, true, false);
+        MapData mapData = getMap().withoutConnectsTo().build();
 
         // Crosswalk
         LaneTypeAttributes laneTypeCrosswalk = new LaneTypeAttributes();
@@ -500,7 +500,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_NullLaneIdAndNullLaneAttributes_NoConnectsToMessage() {
-        MapData mapData = getMap(true, true, true, true, true, true, false);
+        MapData mapData = getMap().withoutConnectsTo().build();
 
         GenericLane lane = getFirstLane(mapData);
         lane.setLaneID(null);
@@ -513,7 +513,7 @@ public class CTI4501ValidatorTest {
 
     @Test
     public void testMapValidation_IngressTrackedVehicleLane_MissingConnectsTo() {
-        MapData mapData = getMap(true, true, true, true, true, true, false);
+        MapData mapData = getMap().withoutConnectsTo().build();
 
         LaneTypeAttributes laneType = new LaneTypeAttributes();
         laneType.setTrackedVehicle(new LaneAttributes_TrackedVehicle());
@@ -675,116 +675,211 @@ public class CTI4501ValidatorTest {
         return speedLimitList;
     }
 
-    private SPAT getSpat(boolean includeSpatTimestamp, boolean includeRegion, boolean includeIntersectionTimestamp,
-            boolean includeTiming, boolean includeStartTime, boolean includeMaxEndTime, boolean includeNextTime) {
-        SPAT spat = new SPAT();
-        spat.setTimeStamp(includeSpatTimestamp ? new MinuteOfTheYear(1200) : null);
-
-        IntersectionReferenceID id = new IntersectionReferenceID();
-        id.setId(new IntersectionID(100));
-        id.setRegion(includeRegion ? new RoadRegulatorID(20) : null);
-
-        IntersectionState intersection = new IntersectionState();
-        intersection.setId(id);
-        intersection.setTimeStamp(includeIntersectionTimestamp ? new DSecond(100) : null);
-
-        MovementEvent movementEvent = new MovementEvent();
-        if (includeTiming) {
-            TimeChangeDetails timing = new TimeChangeDetails();
-            timing.setStartTime(includeStartTime ? new TimeMark(1) : null);
-            timing.setMaxEndTime(includeMaxEndTime ? new TimeMark(2) : null);
-            timing.setNextTime(includeNextTime ? new TimeMark(3) : null);
-            movementEvent.setTiming(timing);
-        } else {
-            movementEvent.setTiming(null);
-        }
-
-        MovementEventList movementEvents = new MovementEventList();
-        movementEvents.add(movementEvent);
-        MovementState movementState = new MovementState();
-        movementState.setState_time_speed(movementEvents);
-        MovementList movementStates = new MovementList();
-        movementStates.add(movementState);
-        intersection.setStates(movementStates);
-
-        IntersectionStateList intersections = new IntersectionStateList();
-        intersections.add(intersection);
-        spat.setIntersections(intersections);
-
-        return spat;
+    private SpatBuilder getSpat() {
+        return new SpatBuilder();
     }
 
-    private MapData getMap(boolean includeRegion, boolean includeElevation, boolean includeLaneWidth,
-            boolean includeSpeedLimits, boolean includeSpeedLimitType, boolean isIngressVehicleLane,
-            boolean includeConnectsTo) {
-        MapData mapData = new MapData();
+    private static final class SpatBuilder {
+        private boolean includeSpatTimestamp = true;
+        private boolean includeRegion = true;
+        private boolean includeIntersectionTimestamp = true;
+        private boolean includeTiming = true;
+        private boolean includeStartTime = true;
+        private boolean includeMaxEndTime = true;
+        private boolean includeNextTime = true;
 
-        IntersectionGeometry intersection = new IntersectionGeometry();
-        IntersectionReferenceID id = new IntersectionReferenceID();
-        id.setId(new IntersectionID(100));
-        id.setRegion(includeRegion ? new RoadRegulatorID(20) : null);
-        intersection.setId(id);
+        private SpatBuilder withoutSpatTimestamp() {
+            this.includeSpatTimestamp = false;
+            return this;
+        }
 
-        Position3D refPoint = new Position3D();
-        refPoint.setLat(new Latitude(400000000));
-        refPoint.setLong_(new Longitude(-1050000000));
-        refPoint.setElevation(includeElevation ? new Elevation(100) : null);
-        intersection.setRefPoint(refPoint);
-        intersection.setLaneWidth(includeLaneWidth ? new LaneWidth(300) : null);
+        private SpatBuilder withoutRegion() {
+            this.includeRegion = false;
+            return this;
+        }
 
-        if (includeSpeedLimits) {
-            SpeedLimitList speedLimits = new SpeedLimitList();
-            if (!includeSpeedLimitType) {
-                RegulatorySpeedLimit speedLimit = new RegulatorySpeedLimit();
-                speedLimit.setType(null);
-                speedLimit.setSpeed(new Velocity(200));
-                speedLimits.add(speedLimit);
+        private SpatBuilder withoutIntersectionTimestamp() {
+            this.includeIntersectionTimestamp = false;
+            return this;
+        }
+
+        private SpatBuilder withoutTiming() {
+            this.includeTiming = false;
+            return this;
+        }
+
+        private SpatBuilder withoutStartTime() {
+            this.includeStartTime = false;
+            return this;
+        }
+
+        private SpatBuilder withoutMaxEndTime() {
+            this.includeMaxEndTime = false;
+            return this;
+        }
+
+        private SpatBuilder withoutNextTime() {
+            this.includeNextTime = false;
+            return this;
+        }
+
+        private SPAT build() {
+            SPAT spat = new SPAT();
+            spat.setTimeStamp(includeSpatTimestamp ? new MinuteOfTheYear(1200) : null);
+
+            IntersectionReferenceID id = new IntersectionReferenceID();
+            id.setId(new IntersectionID(100));
+            id.setRegion(includeRegion ? new RoadRegulatorID(20) : null);
+
+            IntersectionState intersection = new IntersectionState();
+            intersection.setId(id);
+            intersection.setTimeStamp(includeIntersectionTimestamp ? new DSecond(100) : null);
+
+            MovementEvent movementEvent = new MovementEvent();
+            if (includeTiming) {
+                TimeChangeDetails timing = new TimeChangeDetails();
+                timing.setStartTime(includeStartTime ? new TimeMark(1) : null);
+                timing.setMaxEndTime(includeMaxEndTime ? new TimeMark(2) : null);
+                timing.setNextTime(includeNextTime ? new TimeMark(3) : null);
+                movementEvent.setTiming(timing);
+            } else {
+                movementEvent.setTiming(null);
             }
-            intersection.setSpeedLimits(speedLimits);
-        } else {
-            intersection.setSpeedLimits(null);
+
+            MovementEventList movementEvents = new MovementEventList();
+            movementEvents.add(movementEvent);
+            MovementState movementState = new MovementState();
+            movementState.setState_time_speed(movementEvents);
+            MovementList movementStates = new MovementList();
+            movementStates.add(movementState);
+            intersection.setStates(movementStates);
+
+            IntersectionStateList intersections = new IntersectionStateList();
+            intersections.add(intersection);
+            spat.setIntersections(intersections);
+
+            return spat;
+        }
+    }
+
+    private MapBuilder getMap() {
+        return new MapBuilder();
+    }
+
+    private static final class MapBuilder {
+        private boolean includeRegion = true;
+        private boolean includeElevation = true;
+        private boolean includeLaneWidth = true;
+        private boolean includeSpeedLimits = true;
+        private boolean includeSpeedLimitType = true;
+        private boolean isIngressVehicleLane = true;
+        private boolean includeConnectsTo = true;
+
+        private MapBuilder withoutRegion() {
+            this.includeRegion = false;
+            return this;
         }
 
-        GenericLane lane = new GenericLane();
-        lane.setLaneID(new LaneID(1));
-        lane.setManeuvers(new AllowedManeuvers());
-
-        NodeListXY nodeListXY = new NodeListXY();
-        nodeListXY.setNodes(new NodeSetXY());
-        lane.setNodeList(nodeListXY);
-
-        LaneAttributes laneAttributes = new LaneAttributes();
-        LaneDirection laneDirection = new LaneDirection();
-        laneDirection.setIngressPath(isIngressVehicleLane);
-        laneAttributes.setDirectionalUse(laneDirection);
-
-        LaneTypeAttributes laneTypeAttributes = new LaneTypeAttributes();
-        laneTypeAttributes.setVehicle(new LaneAttributes_Vehicle());
-        laneAttributes.setLaneType(laneTypeAttributes);
-        lane.setLaneAttributes(laneAttributes);
-
-        if (includeConnectsTo) {
-            Connection connection = new Connection();
-            // A non-null signalGroup is enough to avoid connectsTo validation failures.
-            connection.setConnectingLane(null);
-            connection.setSignalGroup(new SignalGroupID(1));
-
-            ConnectsToList connectsTo = new ConnectsToList();
-            connectsTo.add(connection);
-            lane.setConnectsTo(connectsTo);
-        } else {
-            lane.setConnectsTo(null);
+        private MapBuilder withoutElevation() {
+            this.includeElevation = false;
+            return this;
         }
 
-        LaneList laneSet = new LaneList();
-        laneSet.add(lane);
-        intersection.setLaneSet(laneSet);
+        private MapBuilder withoutLaneWidth() {
+            this.includeLaneWidth = false;
+            return this;
+        }
 
-        IntersectionGeometryList intersections = new IntersectionGeometryList();
-        intersections.add(intersection);
-        mapData.setIntersections(intersections);
+        private MapBuilder withoutSpeedLimits() {
+            this.includeSpeedLimits = false;
+            return this;
+        }
 
-        return mapData;
+        private MapBuilder withoutSpeedLimitType() {
+            this.includeSpeedLimitType = false;
+            return this;
+        }
+
+        private MapBuilder egressVehicleLane() {
+            this.isIngressVehicleLane = false;
+            return this;
+        }
+
+        private MapBuilder withoutConnectsTo() {
+            this.includeConnectsTo = false;
+            return this;
+        }
+
+        private MapData build() {
+            MapData mapData = new MapData();
+
+            IntersectionGeometry intersection = new IntersectionGeometry();
+            IntersectionReferenceID id = new IntersectionReferenceID();
+            id.setId(new IntersectionID(100));
+            id.setRegion(includeRegion ? new RoadRegulatorID(20) : null);
+            intersection.setId(id);
+
+            Position3D refPoint = new Position3D();
+            refPoint.setLat(new Latitude(400000000));
+            refPoint.setLong_(new Longitude(-1050000000));
+            refPoint.setElevation(includeElevation ? new Elevation(100) : null);
+            intersection.setRefPoint(refPoint);
+            intersection.setLaneWidth(includeLaneWidth ? new LaneWidth(300) : null);
+
+            if (includeSpeedLimits) {
+                SpeedLimitList speedLimits = new SpeedLimitList();
+                if (!includeSpeedLimitType) {
+                    RegulatorySpeedLimit speedLimit = new RegulatorySpeedLimit();
+                    speedLimit.setType(null);
+                    speedLimit.setSpeed(new Velocity(200));
+                    speedLimits.add(speedLimit);
+                }
+                intersection.setSpeedLimits(speedLimits);
+            } else {
+                intersection.setSpeedLimits(null);
+            }
+
+            GenericLane lane = new GenericLane();
+            lane.setLaneID(new LaneID(1));
+            lane.setManeuvers(new AllowedManeuvers());
+
+            NodeListXY nodeListXY = new NodeListXY();
+            nodeListXY.setNodes(new NodeSetXY());
+            lane.setNodeList(nodeListXY);
+
+            LaneAttributes laneAttributes = new LaneAttributes();
+            LaneDirection laneDirection = new LaneDirection();
+            laneDirection.setIngressPath(isIngressVehicleLane);
+            laneAttributes.setDirectionalUse(laneDirection);
+
+            LaneTypeAttributes laneTypeAttributes = new LaneTypeAttributes();
+            laneTypeAttributes.setVehicle(new LaneAttributes_Vehicle());
+            laneAttributes.setLaneType(laneTypeAttributes);
+            lane.setLaneAttributes(laneAttributes);
+
+            if (includeConnectsTo) {
+                Connection connection = new Connection();
+                // A non-null signalGroup is enough to avoid connectsTo validation failures.
+                connection.setConnectingLane(null);
+                connection.setSignalGroup(new SignalGroupID(1));
+
+                ConnectsToList connectsTo = new ConnectsToList();
+                connectsTo.add(connection);
+                lane.setConnectsTo(connectsTo);
+            } else {
+                lane.setConnectsTo(null);
+            }
+
+            LaneList laneSet = new LaneList();
+            laneSet.add(lane);
+            intersection.setLaneSet(laneSet);
+
+            IntersectionGeometryList intersections = new IntersectionGeometryList();
+            intersections.add(intersection);
+            mapData.setIntersections(intersections);
+
+            return mapData;
+        }
     }
 
 
